# grafeo

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  NOTICE  README.md  bench-thresholds.toml  deny.toml  mkdocs.yml
.github/workflows/: ci.yml  pypi.yml  release.yml
crates/bindings/c/: Cargo.toml  README.md  grafeo.h
crates/bindings/c/src/: database.rs
crates/bindings/common/: Cargo.toml
crates/bindings/dart/: CHANGELOG.md  README.md  pubspec.yaml
crates/bindings/go/: admin.go  errors.go  grafeo.go  grafeo.h  grafeo_test.go  index.go  node.go  persistence_test.go  transaction.go  types.go  vector.go
crates/bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/bindings/python/: Cargo.toml  README.md  pyproject.toml
crates/bindings/wasm/: Cargo.toml  package-lite.json  package.json
crates/grafeo/: Cargo.toml  README.md
crates/grafeo-adapters/: Cargo.toml
crates/grafeo-adapters/src/: lib.rs
crates/grafeo-adapters/src/plugins/algorithms/: centrality.rs  clustering.rs  community.rs  components.rs  flow.rs  isomorphism.rs  mst.rs  shortest_path.rs  structure.rs  traversal.rs
crates/grafeo-adapters/src/query/: keywords.rs  mod.rs  schema.rs
crates/grafeo-adapters/src/query/cypher/: ast.rs  lexer.rs  parser.rs
crates/grafeo-adapters/src/query/gql/: ast.rs  lexer.rs  parser.rs
crates/grafeo-adapters/src/query/graphql/: parser.rs
crates/grafeo-adapters/src/query/gremlin/: ast.rs  lexer.rs  parser.rs
crates/grafeo-adapters/src/query/sparql/: parser.rs
crates/grafeo-adapters/src/query/sql_pgq/: ast.rs  lexer.rs  parser.rs
crates/grafeo-adapters/src/storage/: mod.rs
crates/grafeo-adapters/src/storage/file/: manager.rs
crates/grafeo-adapters/src/storage/wal/: log.rs  record.rs
crates/grafeo-adapters/tests/: graphglot_conformance.rs  sparql_w3c_parser_tests.rs
crates/grafeo-cli/: Cargo.toml
crates/grafeo-cli/src/: main.rs  repl.rs
crates/grafeo-common/: Cargo.toml
crates/grafeo-common/src/: encryption.rs  lib.rs  mvcc.rs  temporal.rs
crates/grafeo-common/src/memory/: arena.rs  mod.rs
crates/grafeo-common/src/memory/buffer/: consumer.rs  manager.rs  mod.rs  region.rs  stats.rs  tiered.rs
crates/grafeo-common/src/storage/: mod.rs  section.rs
crates/grafeo-common/src/testing/: crash.rs
crates/grafeo-common/src/types/: hlc.rs  mod.rs  value.rs  zoned_datetime.rs
crates/grafeo-common/src/utils/: error.rs
crates/grafeo-core/: Cargo.toml
crates/grafeo-core/src/: lib.rs
crates/grafeo-core/tests/: rdf_tests.rs
crates/grafeo-engine/: Cargo.toml
crates/grafeo-engine/benches/: memory_bench.rs  query_bench.rs  regression_bench.rs
crates/grafeo-engine/src/: admin.rs  auth.rs  cdc.rs  config.rs  lib.rs  metrics.rs  session.rs
crates/grafeo-engine/tests/: agent_memory_migration.rs  async_storage.rs  auth_permissions.rs  backup_restore.rs  backward_compatibility.rs  call_procedures.rs  cdc_crud_api.rs  cdc_session_mutations.rs  compact_store_integration.rs  concurrent_sessions.rs  coverage_aggregates.rs  coverage_load_data.rs  coverage_memory.rs  coverage_patterns.rs  coverage_schema_ddl.rs  coverage_session.rs  crash_injection_single_file.rs  database_api.rs  database_creation_options.rs  encryption_integration.rs  epoch_monotonicity.rs  error_paths.rs  expression_and_projection.rs  filter_pushdown.rs  golden_format.rs  gql_spec_compliance.rs  grafeo_file.rs  grafeo_memory_support.rs  graph_benchmarks.rs  graphql.rs  gremlin.rs  label_rollback.rs  leapfrog_integration.rs  lpg_graph_isolation.rs  merge_rollback.rs  metrics_integration.rs  mmr_search.rs  mutation_planning.rs  mvcc_integration.rs  named_graphs.rs  (+36 more)
crates/grafeo-spec-tests/: Cargo.toml  build.rs
crates/grafeo-spec-tests/src/: lib.rs
crates/grafeo-storage/: Cargo.toml
crates/grafeo-storage/src/: async_backend.rs  lib.rs
crates/grafeo-storage/tests/: golden_grafeo_file.rs  golden_wal_frames.rs
crates/grafeo/src/: lib.rs
docs/: gql-dialect.json  index.md  llms.txt  roadmap.md
docs/api/c/: index.md
docs/api/csharp/: index.md
docs/api/dart/: index.md
docs/api/go/: index.md
docs/api/node/: database.md  index.md  query.md
docs/api/python/: database.md  edge.md  node.md  result.md  transaction.md
docs/api/rust/: adapters.md  common.md  core.md  engine.md  index.md
docs/api/wasm/: index.md
docs/architecture/: crates.md  feature-profiles.md  index.md  overview.md
docs/architecture/execution/: vectorized.md
docs/architecture/memory/: arena.md  spill.md
docs/architecture/optimization/: cardinality.md  cost.md  index.md
docs/architecture/storage/: container-format.md  index.md  ring-index.md
docs/comparisons/: index.md  sparql-vs-gql.md
docs/contributing/: code-style.md  index.md  setup.md  testing.md
docs/deployment/: aws.md  azure.md  docker.md  gcp.md  index.md  kubernetes.md
docs/ecosystem/: grafeo-llamaindex.md  grafeo-mcp.md  grafeo-memory.md  grafeo-server.md  index.md  performance.md
docs/getting-started/: cli.md  configuration.md  first-graph.md  installation.md  migration.md  quickstart.md  security.md  troubleshooting.md
docs/overrides/: main.html
docs/tutorials/: knowledge-graph.md
docs/tutorials/examples/: arrow-export-example.md  duckdb-integration.md  index.md
docs/user-guide/: cdc.md  compact-store.md  named-graphs.md  observability.md  offline-sync.md  temporal.md  transactions.md
docs/user-guide/cypher/: aggregations.md  filtering.md  mutations.md
docs/user-guide/dart/: flutter.md
docs/user-guide/data-model/: gql-vs-sparql.md  lpg-vs-rdf.md  properties.md
docs/user-guide/extending/: custom-functions.md  plugins.md  rust-extensions.md  storage-backends.md
docs/user-guide/gql/: aggregations.md  basic-queries.md  composite-queries.md  conformance.md  expressions.md  filtering.md  functions-element.md  index.md  (+9 more)
examples/rust/: Cargo.toml  basic.rs  parameterized.rs  transactions.rs  vector_search.rs
scripts/: bench-compare.sh  build-wasm.ps1  build-wasm.sh  ci-spec.ps1  gql-conformance.py  parse-thresholds.py
tests/graphglot/: corpus.json  generate_corpus.py
(+437 files in other folders)
