[package]
name = "grafeo-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Storage, query language, and plugin adapters for Grafeo"

[dependencies]
grafeo-common.workspace = true
grafeo-core.workspace = true

# Error handling
thiserror.workspace = true

# Data structures
smallvec.workspace = true
hashbrown.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Concurrency
parking_lot.workspace = true
rayon = { workspace = true, optional = true }

# Tracing (optional, zero-cost when disabled)
tracing = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
serde_json = "1"

[features]
default = ["gql", "parallel"]
gql = []                      # GQL parser (ISO/IEC 39075:2024)
cypher = ["gql"]              # Cypher parser (openCypher 9.0)
sparql = []                   # SPARQL parser (W3C SPARQL 1.1)
gremlin = []                  # Gremlin parser (Apache TinkerPop)
graphql = []                  # GraphQL parser (spec-compliant)
sql-pgq = ["gql"]             # SQL/PGQ parser (SQL:2023 GRAPH_TABLE)
rdf = ["grafeo-core/rdf"]    # RDF graph model support
parallel = ["rayon", "grafeo-core/parallel"]  # Parallel algorithms (rayon)
algos = []  # Graph algorithm plugin (SSSP, PageRank, centrality, community detection, etc.)
# Convenience groups
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]  # All query language parsers
full = ["languages", "rdf", "parallel", "algos"]

tracing = ["dep:tracing", "grafeo-common/tracing"]  # Observability spans and events

[lints]
workspace = true
