[package]
name = "grafeo-c"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C FFI bindings for Grafeo graph database"

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[dependencies]
grafeo-engine = { path = "../../grafeo-engine" }
grafeo-core = { path = "../../grafeo-core" }
grafeo-common = { path = "../../grafeo-common" }
grafeo-bindings-common = { path = "../common" }

serde_json = { version = "1.0", features = ["preserve_order"] }
parking_lot.workspace = true

[features]
default = ["embedded"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "grafeo-engine/triple-store"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
vector-index = ["grafeo-engine/vector-index"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
cdc = ["grafeo-engine/cdc"]
algos = ["grafeo-engine/algos"]
triple-store = ["grafeo-engine/triple-store"]
compact-store = ["grafeo-engine/compact-store"]
jsonl-import = ["grafeo-engine/jsonl-import"]
parquet-import = ["grafeo-engine/parquet-import"]
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]
storage = ["grafeo-engine/storage"]
# Persona-based profiles
lpg = ["grafeo-engine/lpg", "gql", "cypher", "gremlin", "sql-pgq", "storage", "grafeo-engine/regex"]
rdf = ["triple-store", "gql", "sparql", "graphql", "storage", "grafeo-engine/regex"]
analytics = ["algos", "vector-index", "text-index", "hybrid-search", "jsonl-import", "parquet-import"]
edge = ["grafeo-engine/lpg", "gql", "grafeo-engine/regex-lite"]
# Deployment-based profiles (deprecated)
embedded = ["gql", "ai", "algos", "compact-store", "grafeo-engine/parallel", "grafeo-engine/regex", "grafeo-engine/grafeo-file"]
full = ["languages", "ai", "algos", "triple-store"]

[lints]
workspace = true
